--- a/languages/lazaruside.fi.po
+++ b/languages/lazaruside.fi.po
@@ -148,11 +148,11 @@ msgstr "&Tiedosto"
 
 #: lazarusidestrconsts:uemfinddeclaration
 msgid "&Find Declaration"
-msgstr ""
+msgstr "&Etsi määrittely"
 
 #: lazarusidestrconsts:uemgotobookmark
 msgid "&Goto Bookmark"
-msgstr ""
+msgstr "&Siirry kirjaimerkkiin"
 
 #: lazarusidestrconsts:lismenuhelp
 msgid "&Help"
@@ -160,7 +160,7 @@ msgstr "&Ohje"
 
 #: lazarusidestrconsts:uemopenfileatcursor
 msgid "&Open file at cursor"
-msgstr ""
+msgstr "&Avaa kohdistimen osoittama tiedosto"
 
 #: lazarusidestrconsts:lismenuproject
 msgid "&Project"
@@ -184,7 +184,7 @@ msgstr "&Etsi"
 
 #: lazarusidestrconsts:uemsetbookmark
 msgid "&Set Bookmark"
-msgstr ""
+msgstr "&Merkitse kirjainmerkiksi"
 
 #: lazarusidestrconsts:dlgtexttofing
 msgid "&Text to Find"
@@ -232,7 +232,7 @@ msgstr ""
 
 #: lazarusidestrconsts:lisafilealreadyexistsreplaceit
 msgid "A file %s%s%s already exists.%sReplace it?"
-msgstr ""
+msgstr "Tiedosto %s%s%s on jo olemassa.%skorvataanko se? "
 
 #: lazarusidestrconsts:lisa2papascalunitmusthavetheextensionpporpas
 msgid "A pascal unit must have the extension .pp or .pas"
@@ -296,7 +296,7 @@ msgstr ""
 
 #: lazarusidestrconsts:lismenuaddtoproject
 msgid "Add editor file to Project"
-msgstr ""
+msgstr "Lisää editorin tiedosto projektiin"
 
 #: lazarusidestrconsts:lisa2paddfile
 msgid "Add File"
@@ -736,7 +736,7 @@ msgstr ""
 
 #: lazarusidestrconsts:lisdiffdlgcaseinsensitive
 msgid "Case Insensitive"
-msgstr "Sama kirjainkoko"
+msgstr "Kirjaimen koolla ei väliä"
 
 #: lazarusidestrconsts:dlgcasesensitive
 msgid "Case Sensitive"
@@ -992,7 +992,7 @@ msgstr ""
 
 #: lazarusidestrconsts:lismenucommentselection
 msgid "Comment selection"
-msgstr ""
+msgstr "Laita lohko kommentiksi (//)"
 
 #: lazarusidestrconsts:liscodetemplcomment
 msgid "Comment:"
@@ -1112,7 +1112,7 @@ msgstr ""
 
 #: lazarusidestrconsts:lisprojinspconfirmremovingfile
 msgid "Confirm removing file"
-msgstr ""
+msgstr "Vahvista tiedoston poistaminen"
 
 #: lazarusidestrconsts:srkmconflic
 msgid "Conflict "
@@ -1204,7 +1204,7 @@ msgstr ""
 
 #: lazarusidestrconsts:lisnewdlgcreateanewpascalunit
 msgid "Create a new pascal unit."
-msgstr ""
+msgstr "Tee uusi pascal käännösyksikkö (unit)"
 
 #: lazarusidestrconsts:lisnewdlgcreateanewcustomprogram
 msgid "Create a new program."
@@ -1228,7 +1228,7 @@ msgstr ""
 
 #: lazarusidestrconsts:lisnewdlgcreateanewunitwithalclform
 msgid "Create a new unit with a LCL form."
-msgstr ""
+msgstr "Tee uusi unit ja lomake (LCL form)"
 
 #: lazarusidestrconsts:liscreateaprojectfirst
 msgid "Create a project first!"
@@ -1272,7 +1272,7 @@ msgstr ""
 
 #: lazarusidestrconsts:lismenuinsertdatetime
 msgid "Current date and time"
-msgstr ""
+msgstr "Päivämäärä ja aika"
 
 #: lazarusidestrconsts:lisedtdefcurrentproject
 msgid "Current Project"
@@ -1284,7 +1284,7 @@ msgstr ""
 
 #: lazarusidestrconsts:lismenuinsertusername
 msgid "Current username"
-msgstr ""
+msgstr "Käyttäjätunnus"
 
 #: lazarusidestrconsts:dlgcursorbeyondeol
 msgid "Cursor beyond EOL"
@@ -1588,7 +1588,7 @@ msgstr "Eroavuudet"
 
 #: lazarusidestrconsts:dlgdirection
 msgid "Direction"
-msgstr ""
+msgstr "Suunta"
 
 #: lazarusidestrconsts:liscodetoolsdefsinsertbehinddirectory
 msgid "Directory"
@@ -1760,7 +1760,7 @@ msgstr ""
 
 #: lazarusidestrconsts:dlgentirescope
 msgid "Entire Scope"
-msgstr ""
+msgstr "Ulottuvuuden alkukohta"
 
 #: lazarusidestrconsts:dlgrunoenvironment
 msgid "Environment"
@@ -1964,7 +1964,7 @@ msgstr ""
 
 #: lazarusidestrconsts:dlgfileexts
 msgid "File extensions:"
-msgstr "Tiedostopäätteet"
+msgstr "Tiedostopäätteet:"
 
 #: lazarusidestrconsts:lispkgmangfileisalreadyinpackage
 msgid "File is already in package"
@@ -2060,7 +2060,7 @@ msgstr "Etsi"
 
 #: lazarusidestrconsts:lismenufindinfiles
 msgid "Find &in files"
-msgstr ""
+msgstr "Etsi tiedostoista"
 
 #: lazarusidestrconsts:lismenufindnext
 msgid "Find &Next"
@@ -2088,11 +2088,11 @@ msgstr "Etsi määrittely"
 
 #: lazarusidestrconsts:lismenufinddeclarationatcursor
 msgid "Find Declaration at cursor"
-msgstr ""
+msgstr "Etsi kohdistimen osoittaman kohdan määrittely"
 
 #: lazarusidestrconsts:srkmecfindinfiles
 msgid "Find in files"
-msgstr ""
+msgstr "Etsi tiedostoista"
 
 #: lazarusidestrconsts:srkmecfindnext
 msgid "Find next"
@@ -2180,7 +2180,7 @@ msgstr "ranska"
 
 #: lazarusidestrconsts:dlgfromcursor
 msgid "From Cursor"
-msgstr ""
+msgstr "Kohdistimen osoittama kohta"
 
 #: lazarusidestrconsts:listmfunctionappendpathdelimiter
 msgid "Function: append path delimiter"
@@ -2222,6 +2222,10 @@ msgstr ""
 msgid "Generate code for gprof"
 msgstr ""
 
+#: lazarusidestrconsts:dlgcovalgrind
+msgid "Generate code for valgrind"
+msgstr ""
+
 #: lazarusidestrconsts:dlgcodbx
 msgid "Generate Debugging Info For DBX (Slows Compiling)"
 msgstr ""
@@ -2240,7 +2244,7 @@ msgstr ""
 
 #: lazarusidestrconsts:dlgglobal
 msgid "Global"
-msgstr ""
+msgstr "Kaikki"
 
 #: lazarusidestrconsts:lisedtdefglobalsourcepathaddition
 msgid "Global Source Path addition"
@@ -2355,7 +2359,7 @@ msgid "Half Page Scroll"
 msgstr ""
 
 #: lazarusidestrconsts:lismenueditorhandleonclickevent
-msgid "Handle OnCLick Event"
+msgid "Handle OnClick Event"
 msgstr ""
 
 #: lazarusidestrconsts:srvk_hanja
@@ -2480,11 +2484,11 @@ msgstr "Ohita"
 
 #: lazarusidestrconsts:lisdiffdlgignoreifspacecharswereadd
 msgid "Ignore amount of space chars"
-msgstr ""
+msgstr "Jätä huomiotta välilyöntien määrä merkkien välissä "
 
 #: lazarusidestrconsts:lisdiffdlgignoreiflineendcharsdiffe
 msgid "Ignore difference in line ends (e.g. #10 = #13#10)"
-msgstr "Jätä huomiotta erilaiset rivinloppumerkinnät (esim. #10 = #13#10) "
+msgstr "Jätä huomiotta erilaiset rivinloppumerkinnät (esim. #10 = #13#10)"
 
 #: lazarusidestrconsts:lisdiskdiffignorediskchanges
 msgid "Ignore disk changes"
@@ -2492,7 +2496,7 @@ msgstr ""
 
 #: lazarusidestrconsts:lisdiffdlgignoreifemptylineswereadd
 msgid "Ignore if empty lines were added or removed"
-msgstr ""
+msgstr "Jätä huomiotta tyhjät rivit"
 
 #: lazarusidestrconsts:lissortselignorespace
 msgid "Ignore Space"
@@ -2500,15 +2504,15 @@ msgstr ""
 
 #: lazarusidestrconsts:lisdiffdlgignorespaces
 msgid "Ignore spaces (newline chars not included)"
-msgstr ""
+msgstr "Jätä välilyönnit huomiotta (ei koske tyhjiä rivejä)"
 
 #: lazarusidestrconsts:lisdiffdlgignorespacesatendofline
 msgid "Ignore spaces at end of line"
-msgstr "Ei huomioida välilyöntejä rivin lopussa"
+msgstr "Jätä huomiotta välilyöntejä rivin lopussa"
 
 #: lazarusidestrconsts:lisdiffdlgignorespacesatstartofline
 msgid "Ignore spaces at start of line"
-msgstr ""
+msgstr "Jätä huomiotta välilyönnit rivin alussa"
 
 #: lazarusidestrconsts:srkmecimestr
 msgid "Ime Str"
@@ -2756,7 +2760,7 @@ msgstr ""
 
 #: lazarusidestrconsts:lismenuinserttext
 msgid "Insert text"
-msgstr ""
+msgstr "Lisää seuraava teksti"
 
 #: lazarusidestrconsts:lispckeditinstall
 msgid "Install"
@@ -3112,7 +3116,7 @@ msgstr ""
 
 #: lazarusidestrconsts:dlglevelnoneopt
 msgid "Level 0 (no extra Optimizations)"
-msgstr ""
+msgstr "Taso 0 (Ei optimointia)"
 
 #: lazarusidestrconsts:dlglevel1opt
 msgid "Level 1 (Quick Optimizations)"
@@ -3120,11 +3124,11 @@ msgstr "Taso 1 (Nopea optimoiti)"
 
 #: lazarusidestrconsts:dlglevel2opt
 msgid "Level 2 (Level 1 + Slower Optimizations)"
-msgstr "Taso 2 (taso 1 + hitaampi optimoiti)"
+msgstr "Taso 2 (Taso 1 + hitaampi optimoiti)"
 
 #: lazarusidestrconsts:dlglevel3opt
 msgid "Level 3 (Level 2 + Uncertain)"
-msgstr "Taso 3 (taso2 + Uncertain)"
+msgstr "Taso 3 (Taso2 + Uncertain)"
 
 #: lazarusidestrconsts:lispkgfiletypelfm
 msgid "LFM - Lazarus form text"
@@ -3168,7 +3172,7 @@ msgstr ""
 
 #: lazarusidestrconsts:lissortsellines
 msgid "Lines"
-msgstr ""
+msgstr "Rivit"
 
 #: lazarusidestrconsts:dlglinklibraries
 msgid "Link Libraries:"
@@ -3572,7 +3576,7 @@ msgstr ""
 
 #: lazarusidestrconsts:lisuidno
 msgid "no"
-msgstr ""
+msgstr "ei"
 
 #: lazarusidestrconsts:dlgednoerr
 msgid "No errors in key mapping found."
@@ -3636,7 +3640,7 @@ msgstr ""
 
 #: lazarusidestrconsts:lisuenotfound
 msgid "Not found"
-msgstr ""
+msgstr "Ei löytynyt"
 
 #: lazarusidestrconsts:uenotimplcap
 msgid "Not implemented yet"
@@ -3716,11 +3720,11 @@ msgstr "Avaa tiedosto"
 
 #: lazarusidestrconsts:srkmecopenfileatcursor
 msgid "Open file at cursor"
-msgstr "Avaa kursorin osoittama tiedosto"
+msgstr "Avaa kohdistimen osoittama tiedosto"
 
 #: lazarusidestrconsts:lismenuopenfilenameatcursor
 msgid "Open filename at cursor"
-msgstr "Avaa kursorin osoittama tiedosto"
+msgstr "Avaa kohdistimen osoittama tiedosto"
 
 #: lazarusidestrconsts:dlgqopenlastprj
 msgid "Open last project at start"
@@ -3808,7 +3812,7 @@ msgstr ""
 
 #: lazarusidestrconsts:dlgsrorigin
 msgid "Origin"
-msgstr ""
+msgstr "Lähtökohta"
 
 #: lazarusidestrconsts:dlgcoother
 msgid "Other"
@@ -3844,7 +3848,7 @@ msgstr ""
 
 #: lazarusidestrconsts:lisoverwritefile
 msgid "Overwrite file?"
-msgstr ""
+msgstr "Korvataanko tiedosto?"
 
 #: lazarusidestrconsts:srkmecoverwritemode
 msgid "Overwrite Mode"
@@ -4196,7 +4200,7 @@ msgstr ""
 
 #: lazarusidestrconsts:dlgpromptonreplace
 msgid "Prompt On Replace"
-msgstr ""
+msgstr "Kysy vielä muutoksen vahvistusta"
 
 #: lazarusidestrconsts:dlgpropertycompletion
 msgid "Property completion"
@@ -4256,7 +4260,7 @@ msgstr ""
 
 #: lazarusidestrconsts:uepreadonly
 msgid "Readonly"
-msgstr ""
+msgstr "Vain luettavissa"
 
 #: lazarusidestrconsts:lispkgmangrebuildlazarus
 msgid "Rebuild Lazarus?"
@@ -4304,7 +4308,7 @@ msgstr ""
 
 #: lazarusidestrconsts:dlgregularexpressions
 msgid "Regular Expressions"
-msgstr ""
+msgstr "Säännölliset lausekkeet"
 
 #: lazarusidestrconsts:lispckoptsrelease
 msgid "Release"
@@ -4316,7 +4320,7 @@ msgstr ""
 
 #: lazarusidestrconsts:lisexttoolremove
 msgid "Remove"
-msgstr ""
+msgstr "Poista"
 
 #: lazarusidestrconsts:lisremoveallinvalidproperties
 msgid "Remove all invalid properties"
@@ -4344,7 +4348,7 @@ msgstr ""
 
 #: lazarusidestrconsts:lisprojinspremovefilefromproject
 msgid "Remove file %s from project?"
-msgstr ""
+msgstr "Poistetaanko tiedosto %s projektista?"
 
 #: lazarusidestrconsts:lispckeditremovefilefrompackage
 msgid "Remove file %s%s%s%sfrom package %s%s%s?"
@@ -4360,7 +4364,7 @@ msgstr ""
 
 #: lazarusidestrconsts:lismenuremovefromproject
 msgid "Remove from Project"
-msgstr ""
+msgstr "Poista projektista"
 
 #: lazarusidestrconsts:lispckeditremoveselecteditem
 msgid "Remove selected item"
@@ -4576,11 +4580,11 @@ msgstr ""
 
 #: lazarusidestrconsts:lissavechangestoproject
 msgid "Save changes to project %s?"
-msgstr "Tallennetaanko %s -projektiin tehdyt muutokset? "
+msgstr "Tallennetaanko %s -projektiin tehdyt muutokset?"
 
 #: lazarusidestrconsts:lispckeditsavechanges
 msgid "Save Changes?"
-msgstr ""
+msgstr "Talletetaanko muutokset?"
 
 #: lazarusidestrconsts:lissavecurrenteditorfile
 msgid "save current editor file"
@@ -4648,7 +4652,7 @@ msgstr ""
 
 #: lazarusidestrconsts:dlgscope
 msgid "Scope"
-msgstr ""
+msgstr "Ulottuvuus"
 
 #: lazarusidestrconsts:srvk_scroll
 msgid "Scroll"
@@ -4684,11 +4688,11 @@ msgstr ""
 
 #: lazarusidestrconsts:lisfindfilesearchallfilesinproject
 msgid "search all files in project"
-msgstr ""
+msgstr "Hae projektin kaikista tiedostoista"
 
 #: lazarusidestrconsts:lisfindfilesearchallopenfiles
 msgid "search all open files"
-msgstr ""
+msgstr "Hae kaikista avoinna olevista tiedostoista"
 
 #: lazarusidestrconsts:lisfindfilesearchindirectories
 msgid "search in directories"
@@ -4704,7 +4708,7 @@ msgstr ""
 
 #: lazarusidestrconsts:lisuesearchstringnotfound
 msgid "Search string '%s' not found!"
-msgstr ""
+msgstr "Etsittyä merkkijonoa '%s' ei löydetty!"
 
 #: lazarusidestrconsts:dlgsearchabort
 msgid "Search terminated by user."
@@ -4844,7 +4848,7 @@ msgstr ""
 
 #: lazarusidestrconsts:dlgselectedtext
 msgid "Selected Text"
-msgstr ""
+msgstr "Valittu teksti"
 
 #: lazarusidestrconsts:dlgruberbandselectioncolor
 msgid "Selection"
@@ -5096,11 +5100,11 @@ msgstr ""
 
 #: lazarusidestrconsts:lissortselsort
 msgid "Sort"
-msgstr ""
+msgstr "Lajittele"
 
 #: lazarusidestrconsts:lismenusortselection
 msgid "Sort selection"
-msgstr ""
+msgstr "Lajittele lohko"
 
 #: lazarusidestrconsts:lissourcedirectorydoesnotexists
 msgid "Source directory %s%s%s does not exists."
@@ -5376,7 +5380,7 @@ msgstr ""
 
 #: lazarusidestrconsts:lisfindfiletexttofind
 msgid "Text to find:"
-msgstr ""
+msgstr "Etsittävä teksti:"
 
 #: lazarusidestrconsts:lisdiffdlgtext1
 msgid "Text1"
@@ -6132,7 +6136,7 @@ msgstr ""
 
 #: lazarusidestrconsts:lismenuuncommentselection
 msgid "Uncomment selection"
-msgstr ""
+msgstr "Poista lohkon kommentointi (//)"
 
 #: lazarusidestrconsts:liscodetoolsdefsundefine
 msgid "Undefine"
@@ -6256,7 +6260,7 @@ msgstr ""
 
 #: lazarusidestrconsts:lismenuviewunits
 msgid "Units..."
-msgstr ""
+msgstr "Käännösyksiköt eli unitit ..."
 
 #: lazarusidestrconsts:srvk_unknown
 msgid "Unknown"
@@ -6432,7 +6436,7 @@ msgstr "Näytä komponenttimuokkain"
 
 #: lazarusidestrconsts:dlgmainviewforms
 msgid "View project forms"
-msgstr "Näytä projektin lomakkeet(forms) "
+msgstr "Näytä projektin lomakkeet(forms)"
 
 #: lazarusidestrconsts:dlgmainviewunits
 msgid "View project units"
@@ -6504,11 +6508,11 @@ msgstr ""
 
 #: lazarusidestrconsts:lisfindfilewhere
 msgid "Where"
-msgstr ""
+msgstr "Mistä"
 
 #: lazarusidestrconsts:dlgwholewordsonly
 msgid "Whole Words Only"
-msgstr ""
+msgstr "Etsi vain kokonaisia sanoja"
 
 #: lazarusidestrconsts:dlgwidthpos
 msgid "Width:"
