--- a/components/codetools/languages/codetools.itiso.po
+++ b/components/codetools/languages/codetools.itiso.po
@@ -4,7 +4,7 @@ msgstr ""
 "Last-Translator: Marco Ciampa <ciampix@libero.it>\n"
 "Language-Team: italiano <tp@lists.linux.it>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Type: text/plain; charset=iso-8859-1\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Project-Id-Version: 0.9.3"
 
