--- a/lcl/languages/lcl.itiso.po
+++ b/lcl/languages/lcl.itiso.po
@@ -3,7 +3,7 @@ msgstr ""
 "Last-Translator: Marco Ciampa <ciampix@libero.it>\n"
 "PO-Revision-Date: 2004-06-21 23:00+0200\n"
 "Language-Team: italiano <tp@lists.linux.it>\n"
-"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Type: text/plain; charset=iso-8859-1\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Project-Id-Version: 0.9.2\n"
 "MIME-Version: 1.0\n"
