added usage hints
 SVN 5689@trunk

--- a/components/rtticontrols/README
+++ b/components/rtticontrols/README
@@ -1,5 +1,8 @@
 RTTI Controls for LCL
 
+
+What is RTTI?
+
 RTTI stands for the FreePascal Run Time Type Information.
 The RTTI controls can be connected to published properties of TPersistant
 objects (e.g. any LCL or FCL component). For example you can connect a
@@ -10,4 +13,29 @@ the Object Inspector can edit. But contrary to the Inspector the RTTI controls
 are not limited to TEdit and TComboBox.
 
 
+Usage:
+
+Each RTTI control has a property "Link".
+There you can set the TIObject and the TIPropertyName.
+For example:
+ TIEdit.Link.TIObject:=Button1;
+ TIEdit.Link.TIPropertyName:="Visible";
+Or
+ TIEdit.Link.SetObjectAndProperty(Button1,"Visible");
+ 
+Make sure to unlink, before you destroy the connected TIObject:
+ TIEdit.Link.TObject:=nil;
+Otherwiese you can get access violations, when the RTTI control tries to access
+it. For TComponent descendents like TButton the unlinking is done automatically.
+ 
+
+Updating:
+
+The RTTI has no callbacks, so if a property changes, the RTTI control does not
+recognize this. You can either call
+  TIEdit.Link.LoadFromProperty;
+or you can set ploReadOnIdle in TIEdit.Link.Options;
+  TIEdit.Link.Options:=TIEdit.Link.Options+[ploReadOnIdle];
+Then the RTTI control will call LoadFromProperty everytime the Application gets
+idle.
 
