fixed compilation for fpc 1.0.10
 SVN 5700@trunk

--- a/components/interbase/README
+++ b/components/interbase/README
@@ -9,4 +9,7 @@ You need to install
   For example:
   ln -s /usr/local/firebird/lib/libfbclient.so /usr/lib/libgds.so
   
+
+Links:
+  http://www.progdigy.com/
   
